--- a/chatify-frontend/index.html
+++ b/chatify-frontend/index.html
@@ -1,54 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chatify - An Internship Task</title>
-    <script src='main.js'></script>
+    <script src='index.js'></script>
+
 </head>
 <style>
-    #headline{
+    #headline {
         text-align: center;
         padding: 10px;
     }
-    #chatbox{
-        padding: 10px;
-    }
-    #container{
+    #container {
         border: 5px solid;
         margin: auto;
         width: 50%;
-        padding: 10px;   
-    }
-    #msg_display{
-        width: 95%;
-        height: 250px;
-        border: 1px solid black;
         padding: 10px;
-        overflow-y: auto;
     }
-    #message_input{
-        width: 95%;
-        height: 250px;
+    #authenticator {
+        margin: auto;
+        width: 50%;
         padding: 10px;
-
+    }
+    input{
+        width: 100%;
     }
 </style>
+
 <body>
     <div id="container">
         <div id="headline">
             <h1>Welcome to Chatify!</h1>
-            <p>Please enter a username and message to send.</p>
+            <p>Please enter your username and password to login or register.</p>
         </div>
-        <div id="chatbox">
-            <div id="msg_display"></div>
-            <br>
+        <div id="authenticator">
             <span><input type="text" id="username_input" placeholder="Username"></span>
             <br>
-            <textarea id="message_input" placeholder="Type message here..."></textarea>
+            <span><input type="password" id="password_input" placeholder="Password"></span>
             <br>
-            <button id="send_button">Send Message</button>
+            <span id="buttons"><button id="login_button">Login</button><button id="register_button">Register</button></span>
         </div>
     </div>
 </body>
+
 </html>
